--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/satchel.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/satchel.yml
@@ -25,6 +25,8 @@
     contents:
       - id: BoxSurvivalSecurity
       - id: Flash
+      - id: SpaceCash10
+      - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -34,6 +36,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalMedical
+      - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -43,6 +46,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: SpaceCash100
       #- name: StationCharter
       #- name: TelescopicBaton
 
@@ -54,6 +58,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalEngineering
+      - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -63,6 +68,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -72,6 +78,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -81,6 +88,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -92,6 +100,7 @@
       - id: BoxSurvival
       - id: Bible
       - id: RubberStampChaplain
+      - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -103,6 +112,7 @@
         - id: BoxSurvival
         - id: AcousticGuitarInstrument
         - id: SaxophoneInstrument
+        - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -113,6 +123,7 @@
       contents:
         - id: BoxSurvival
         - id: BookRandom
+        - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -126,6 +137,8 @@
       - id: CigPackBlack
       - id: BoxForensicPad
       - id: HandLabeler
+      - id: SpaceCash10
+      - id: SpaceCash10
 
 - type: entity
   noSpawn: true
@@ -135,6 +148,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: SpaceCash10
 
 - type: entity
   noSpawn: true
