Secret weapon(of mass destruction)

--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
@@ -762,3 +762,19 @@
             Amount: 1
             DefaultPrototype: Beaker
             ExamineName: Glass Beaker
+
+- type: entity
+  id: DemolisherCircuitboard
+  parent: BaseMachineCircuitboard
+  name: demolisher machine board
+  components:
+    - type: Sprite
+      state: engineering
+    - type: MachineBoard
+      prototype: Demolisher
+      requirements:
+        Capacitor: 1
+        Laser: 3
+      materialRequirements:
+        CableHV: 5
+        Glass: 2
