Map and preacher upd

--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -274,7 +274,7 @@
     state: pda-mime
 
 - type: entity
-  name: Chaplain PDA
+  name: Preacher PDA
   parent: BasePDA
   id: ChaplainPDA
   description: God's chosen PDA.
