--- a/Resources/Prototypes/Entities/Structures/Walls/asteroid.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/asteroid.yml
@@ -56,3 +56,19 @@
   - type: OreVein
     oreChance: 0.33
     oreRarityPrototypeId: RandomOreDistributionStandard
+    
+- type: entity
+  id: AsteroidRockInvincible
+  parent: AsteroidRock
+  name: asteroid rock
+  suffix: invincible
+  description: An asteroid.
+  components:
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 100000 #Kinda shit, but i am lazy
+      behaviors:
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
