--- a/Resources/Prototypes/Tiles/plating.yml
+++ b/Resources/Prototypes/Tiles/plating.yml
@@ -10,6 +10,19 @@
   friction: 0.5
   thermalConductivity: 0.04
   heatCapacity: 10000
+  
+- type: tile
+  id: PlatingAsteroid
+  name: tiles-plating-asteroid
+  sprite: /Textures/Tiles/plating.png
+  baseTurfs:
+  - PlatingAsteroid
+  isSubfloor: true
+  footstepSounds:
+    collection: FootstepPlating
+  friction: 0.5
+  thermalConductivity: 0.04
+  heatCapacity: 10000
 
 - type: tile
   id: Lattice
