--- a/Resources/Prototypes/Tiles/floors.yml
+++ b/Resources/Prototypes/Tiles/floors.yml
@@ -14,6 +14,23 @@
   itemDrop: FloorTileItemSteel
   thermalConductivity: 0.04
   heatCapacity: 10000
+  
+- type: tile
+  id: FloorSteelAsteroid
+  name: tiles-steel-floor-asteroid
+  sprite: /Textures/Tiles/steel.png
+  variants: 4
+  placementVariants: [0, 1, 2, 3]
+  baseTurfs:
+  - PlatingAsteroid
+  isSubfloor: false
+  canCrowbar: true
+  footstepSounds:
+    collection: FootstepFloor
+  friction: 0.30
+  itemDrop: FloorTileItemSteel
+  thermalConductivity: 0.04
+  heatCapacity: 10000
 
 - type: tile
   id: FloorSteelMini
