--- a/Resources/Prototypes/Entities/Structures/Lighting/ground_lighting.yml
+++ b/Resources/Prototypes/Entities/Structures/Lighting/ground_lighting.yml
@@ -22,7 +22,7 @@
     thresholds:
     - trigger:
         !type:DamageTrigger
-        damage: 100
+        damage: 250
       behaviors:
       - !type:DoActsBehavior
         acts: ["Destruction"]
@@ -56,7 +56,7 @@
     state: on
   - type: PointLight
     radius: 10
-    energy: 0.8
+    energy: 1
     softness: 1
     offset: "0, -0.5"
 
@@ -113,7 +113,7 @@
     - state: off
       map: [ "enum.PoweredLightLayers.Base" ]
   - type: PoweredLight
-    hasLampOnSpawn: LightTube
+    hasLampOnSpawn: LedLightTube
     damage:
       types:
         Heat: 20
