--- a/Resources/Prototypes/Tiles/floors.yml
+++ b/Resources/Prototypes/Tiles/floors.yml
@@ -14,6 +14,23 @@
   itemDrop: FloorTileItemSteel
   thermalConductivity: 0.04
   heatCapacity: 10000
+  
+- type: tile
+  id: FloorSteelAsteroid
+  name: tiles-steel-floor-asteroid
+  sprite: /Textures/Tiles/steel.png
+  variants: 4
+  placementVariants: [0, 1, 2, 3]
+  baseTurfs:
+  - PlatingAsteroid
+  isSubfloor: false
+  canCrowbar: true
+  footstepSounds:
+    collection: FootstepFloor
+  friction: 0.30
+  itemDrop: FloorTileItemSteel
+  thermalConductivity: 0.04
+  heatCapacity: 10000
 
 - type: tile
   id: FloorSteelMini
@@ -1195,7 +1212,7 @@
   name: tiles-asteroid-floor
   sprite: /Textures/Tiles/Asteroid/asteroid_sand.png
   baseTurfs:
-  - Space
+  - FloorAsteroidSand
   isSubfloor: true
   canCrowbar: false
   footstepSounds:
@@ -1227,7 +1244,7 @@
   variants: 3
   placementVariants: [ 0, 1, 2 ]
   baseTurfs:
-  - Space
+  - FloorAsteroidCoarseSand0
   isSubfloor: true
   canCrowbar: false
   footstepSounds:
@@ -1250,7 +1267,7 @@
   name: tiles-asteroid-dug-coarse-sand
   sprite: /Textures/Tiles/Asteroid/asteroid_coarse_sand_dug.png
   baseTurfs:
-  - Space
+  - FloorAsteroidCoarseSandDug
   isSubfloor: true
   canCrowbar: false
   footstepSounds:
@@ -1265,7 +1282,7 @@
   name: tiles-asteroid-ironsand
   sprite: /Textures/Tiles/ironsand1.png
   baseTurfs:
-  - Space
+  - FloorAsteroidIronsand1
   isSubfloor: true
   canCrowbar: false
   footstepSounds:
@@ -1280,7 +1297,7 @@
   name: tiles-asteroid-ironsand-pebbles
   sprite: /Textures/Tiles/ironsand2.png
   baseTurfs:
-  - Space
+  - FloorAsteroidIronsand2
   isSubfloor: true
   canCrowbar: false
   footstepSounds:
@@ -1295,7 +1312,7 @@
   name: tiles-asteroid-ironsand-pebbles
   sprite: /Textures/Tiles/ironsand3.png
   baseTurfs:
-  - Space
+  - FloorAsteroidIronsand3
   isSubfloor: true
   canCrowbar: false
   footstepSounds:
@@ -1310,7 +1327,7 @@
   name: tiles-asteroid-ironsand-rock
   sprite: /Textures/Tiles/ironsand4.png
   baseTurfs:
-  - Space
+  - FloorAsteroidIronsand4
   isSubfloor: true
   canCrowbar: false
   footstepSounds:
