--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
@@ -208,10 +208,7 @@
         - id: BoxSurvival
         - id: trayScanner
         - id: WeaponPulseCarbine
-        - id: RCD
-        - id: RCDAmmo
-        - id: RCDAmmo
-        - id: RCDAmmo
+        - id: WeaponPulseCarbine
 
 - type: entity
   noSpawn: true
