--- a/Resources/Prototypes/Tiles/floors.yml
+++ b/Resources/Prototypes/Tiles/floors.yml
@@ -560,6 +560,21 @@
   heatCapacity: 10000
 
 - type: tile
+  id: FloorTechMaintAsteroid
+  name: tiles-techmaint-floor-asteroid
+  sprite: /Textures/Tiles/tech_maint.png
+  baseTurfs:
+  - AsteroidPlating
+  isSubfloor: false
+  canCrowbar: true
+  footstepSounds:
+    collection: FootstepHull
+  friction: 0.30
+  itemDrop: FloorTileItemTechmaintAsteroid
+  thermalConductivity: 0.04
+  heatCapacity: 10000
+
+- type: tile
   id: FloorReinforced
   name: tiles-reinforced-floor
   sprite: /Textures/Tiles/reinforced.png
