--- a/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
@@ -177,7 +177,7 @@
   - type: FloorTile
     outputs:
       - AsteroidPlating
-      - FloorTileItemTechmaintAsteroid
+      - FloorTechMaintAsteroid
   - type: Stack
     stackType: FloorTileTechmaint
 
