New floor texture + outpost upd

--- a/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
@@ -176,7 +176,7 @@
     heldPrefix: dark
   - type: FloorTile
     outputs:
-      - AsteroidPlating
+      - PlatingAsteroid
       - FloorTechMaintAsteroid
   - type: Stack
     stackType: FloorTileTechmaint
