--- a/Resources/Prototypes/Entities/Markers/atmos_blocker.yml
+++ b/Resources/Prototypes/Entities/Markers/atmos_blocker.yml
@@ -99,3 +99,20 @@
           state: freeze
     - type: AtmosFixMarker
       mode: 6
+
+- type: entity
+  name: Atmos Fix Carbon Dioxide Marker
+  id: AtmosFixCarbonDioxideMarker
+  description: "Carbon dioxide @ 'Lavaland', T20C"
+  parent: MarkerBase
+  components:
+    - type: Sprite
+      layers:
+        - sprite: Markers/atmos.rsi # {
+          state: base
+          shader: unshaded
+        - sprite: Markers/atmos.rsi
+          shader: unshaded # }
+          state: vacuum
+    - type: AtmosFixMarker
+      mode: 7
