--- a/Resources/Prototypes/Ferocity/Weapons/shotguns.yml
+++ b/Resources/Prototypes/Ferocity/Weapons/shotguns.yml
@@ -1,5 +1,5 @@
 - type: entity
-  name: Sos-21
+  name: SOS-21
   parent: BaseWeaponShotgun
   id: WeaponShotgunSos
   description: A next-generation Frozen Star shotgun. Uses .50 shotgun shells.
