--- a/Resources/Prototypes/Species/silicon.yml
+++ b/Resources/Prototypes/Species/silicon.yml
@@ -6,7 +6,7 @@
   sprites: MobAndroidSprites
   markingLimits: MobAndroidMarkingLimits
   dollPrototype: MobAndroidDummy
-  skinColoration: TintedHues
+  skinColoration: Hues
 
 # The lack of a layer means that
 # this person cannot have round-start anything
