--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -463,9 +463,8 @@
       types:
         Heat: 0.1 #per second, scales with temperature & other constants
   - type: HumanoidAppearance
-    species: Human
+    species: Android
   - type: Body
-    prototype: Human
     requiredLegs: 2
   - type: Damageable
     damageContainer: Inorganic
@@ -669,7 +668,7 @@
     - type: Inventory
     - type: ContainerContainer
     - type: Icon
-      sprite: Mobs/Species/Human/parts.rsi
+      sprite: Mobs/Species/Android/parts.rsi
       state: full
     - type: Sprite
       netsync: false
