--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -465,6 +465,7 @@
   - type: HumanoidAppearance
     species: Android
   - type: Body
+    prototype: Human
     requiredLegs: 2
   - type: Damageable
     damageContainer: Inorganic
