--- a/Resources/Prototypes/Ferocity/Weapons/rifles.yml
+++ b/Resources/Prototypes/Ferocity/Weapons/rifles.yml
@@ -14,7 +14,7 @@
   - type: Gun
     fireRate: 5
     soundGunshot:
-      path: /Audio/Weapons/Guns/Gunshots/rifle2.ogg
+      path: /Audio/Ferocity/shot1.ogg
   - type: ChamberMagazineAmmoProvider
   - type: ItemSlots
     slots:
