--- a/Resources/Prototypes/Ferocity/Weapons/rifles.yml
+++ b/Resources/Prototypes/Ferocity/Weapons/rifles.yml
@@ -43,3 +43,49 @@
     steps: 1
     zeroVisible: true
   - type: Appearance
+
+- type: entity
+  name: Hornet
+  parent: BaseWeaponRifle
+  id: WeaponRifleHornet
+  description: Standart weapon for that caliber. Uses .20 rifle ammo.
+  components:
+  - type: Sprite
+    sprite: Ferocity/Weapons/hornet.rsi
+    layers:
+      - state: base
+        map: ["enum.GunVisualLayers.Base"]
+      - state: mag-0
+        map: ["enum.GunVisualLayers.Mag"]
+  - type: Gun
+    fireRate: 5
+    soundGunshot:
+      path: /Audio/Ferocity/shot1.ogg
+  - type: ChamberMagazineAmmoProvider
+  - type: ItemSlots
+    slots:
+      gun_magazine:
+        name: Magazine
+        startingItem: MagazineRifle
+        insertSound: /Audio/Weapons/Guns/MagIn/batrifle_magin.ogg
+        ejectSound: /Audio/Weapons/Guns/MagOut/batrifle_magout.ogg
+        priority: 2
+        whitelist:
+          tags:
+            - MagazineRifle
+      gun_chamber:
+        name: Chamber
+        startingItem: CartridgeRifle
+        priority: 1
+        whitelist:
+          tags:
+            - CartridgeRifle
+  - type: ContainerContainer
+    containers:
+      gun_magazine: !type:ContainerSlot
+      gun_chamber: !type:ContainerSlot
+  - type: MagazineVisuals
+    magState: mag
+    steps: 1
+    zeroVisible: true
+  - type: Appearance
