--- a/Resources/Prototypes/Roles/Jobs/Command/head_of_personnel.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/head_of_personnel.yml
@@ -5,16 +5,8 @@
   playTimeTracker: JobHeadOfPersonnel
   requirements:
     - !type:DepartmentTimeRequirement
-      department: Engineering
-      time: 3600
-    - !type:DepartmentTimeRequirement
-      department: Medical
-      time: 3600
-    - !type:DepartmentTimeRequirement
-      department: Security
-      time: 3600
-    - !type:OverallPlaytimeRequirement
-      time: 108000
+      department: Civilian
+      time: 18000
   weight: 20
   startingGear: HoPGear
   icon: "HeadOfPersonnel"
