--- a/Resources/Prototypes/Ferocity/Weapons/smgs.yml
+++ b/Resources/Prototypes/Ferocity/Weapons/smgs.yml
@@ -20,3 +20,26 @@
     steps: 1
     zeroVisible: true
   - type: Appearance
+
+- type: entity
+  name: Pegasus
+  parent: BaseWeaponSubMachineGun
+  id: WeaponSubMachineGunPegasus
+  description: Pla-ket-ket-ket-ket! Uses .35 auto ammo.
+  components:
+  - type: Sprite
+    sprite: Ferocity/Weapons/pegasus.rsi
+    layers:
+    - state: base
+      map: ["enum.GunVisualLayers.Base"]
+    - state: mag-0
+      map: ["enum.GunVisualLayers.Mag"]
+  - type: Gun
+    fireRate: 12
+    soundGunshot:
+      path: /Audio/Weapons/Guns/Gunshots/atreides.ogg
+  - type: MagazineVisuals
+    magState: mag
+    steps: 1
+    zeroVisible: true
+  - type: Appearance
